add linkedin and link

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,5 +4,5 @@
 - title: Portfolio
   url: https://github.com/justicepelteir
 
-- title: Designer
-  url: http://patdryburgh.com
+- title: Linkedin
+  url: https://www.linkedin.com/in/justicedouglas/
