--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Justice Douglas
 email: hello@patdryburgh.com
 description: >- # this means to ignore newlines until "baseurl:"
-  We can not afford to think outside the box. We must break the box.
+  All we have to decide is what to do with the time that is given us.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://patdryburgh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-512.png
