--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Justice Douglas
-email: hello@patdryburgh.com
+email: justice.douglas@hey.com
 description: >- # this means to ignore newlines until "baseurl:"
   All we have to decide is what to do with the time that is given us.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://patdryburgh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://justicedouglas.com/" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-512.png
 twitter_username: patdryburgh
 github_username:  justicepelteir
