--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   All we have to decide is what to do with the time that is given us.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://justicedouglas.com/" # the base hostname & protocol for your site, e.g. http://example.com
-icon: /assets/images/icon-512.png
+icon: /assets/images/scales-of-justice.png
 twitter_username: patdryburgh
 github_username:  justicepelteir
 
