--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://justicedouglas.com/" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/scales-of-justice.png
-twitter_username: patdryburgh
+twitter_username: 
 github_username:  justicepelteir
 
 # Build settings
