--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Justice Douglas
 email: justice.douglas@hey.com
 description: >- # this means to ignore newlines until "baseurl:"
   All we have to decide is what to do with the time that is given us.
-baseurl: "justice-website" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://justicedouglas.com/" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/scales-of-justice.png
 twitter_username: 
@@ -43,3 +43,5 @@ plugins:
 
 paginate: 3
 paginate_path: "/page/:num/"
+
+hide_search: true
